# lark-CLI-ACP-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/lark_acp_bridge/bot/: feishu_bot.py
src/lark_acp_bridge/cli/: main.py
